--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/morecallan/treehouse-tracker/issues"
   },
-  "homepage": "https://github.com/morecallan/treehouse-tracker#readme"
+  "homepage": "https://github.com/morecallan/treehouse-tracker#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "request": "^2.79.0"
+  }
 }
